Vertical alignment fixes

--- a/test/sample/app/assets/stylesheets/montrose.scss
+++ b/test/sample/app/assets/stylesheets/montrose.scss
@@ -81,6 +81,7 @@
 
   label {
     vertical-align: middle;
+    font-size: 1.1em;
   }
 
   input[type="number"] {
@@ -149,7 +150,6 @@
     text-align: right;
     padding-right: 1em;
     font-weight: bold;
-    font-size: 1.1em;
     line-height: 1.5em;
   }
 
@@ -158,7 +158,6 @@
   }
 
   .montrose-field {
-    font-size: 1.1em;
     float: left;
     width: 70%;
   }
